# palette

./: CMakeLists.txt  README.md
src/: Palette.h  example.cpp
